import "rpc.proto";
import "nuts_model.proto";
import "common_model.proto";

option java_package = "nta.med.service.ihis.proto";
option java_outer_classname = "NutsServiceProto";
option (version) = "1.0.0";
option (service) = "nuts";

// -- [START] NUT0001U00 -------
message NUT0001U00InitializeScreenRequest{
	optional string doctor_gwa_name = 1;
	optional string gwa_code = 2;
	optional string pkocskey = 3;
	optional string fknut0001 = 4;
	optional string in_out_gubun = 5;
	optional string hangmog_code = 6;
}

message NUT0001U00InitializeScreenResponse{
	optional string sys_date = 1;
	optional string gwa_name = 2;
	repeated NUT0001U00GrdNUT0001ItemInfo grd001_item_info = 3;
	optional string seq = 4;
	optional string hangmog_name = 5;
	optional bool is_possible_instead_order = 6;
}
message NUT0001U00Grd0002Request{
	optional string fknut0001 = 1;
}


message NUT0001U00Grd0002Response{
	repeated NUT0001U00GrdNUT0002ItemInfo grd002_item_info = 1;
}



message NUT0001U00LoadDoctorGwaRequest{
	optional string in_out_gubun = 1; 
	optional string pkocskey = 2;
}

message NUT0001U00LoadDoctorGwaResponse{
	repeated ComboListItemInfo doctor_gwa_info = 1;
}


message NUT0001U00SaveLayoutRequest{
	repeated NUT0001U00GrdNUT0001ItemInfo grd001_item_info = 1;
	repeated NUT0001U00GrdNUT0002ItemInfo grd002_item_info = 2;
}

message NUT0001U00LoadDoctorNameRequest{
	optional string param = 1;
}

message NUT0001U00LoadDoctorNameResponse{
	optional string result = 1;
}

message NUT0001U00GetNaewonKeyRequest{
	optional string pkocs = 1;
	optional string io_kubun = 2;
}

message NUT0001U00GetNaewonKeyResponse{
	optional string result = 1;
}

message NUT9001U00grdINP5001Request { 
  optional string magam_date =1;
  optional string offset =2;
  optional string page_number =3;
}
 
message NUT9001U00grdINP5001Response { 
  repeated NUT9001U00grdINP5001Info grd_master_item =1;
}

message NUT9001U00CursorIFS7501Request { 
  optional string pknut2011 =1;
}

message NUT9001U00CursorIFS7501Response { 
  repeated DataStringListItemInfo dt_item =1;
}

message NUT9001U00btnFinalCClickRequest { 
  optional string ctl_tag =1;
  optional string yn =2;
  optional string magam_date =3;
}

message NUT9001U00btnFinalCClickResponse { 
  optional DataStringListItemInfo btnfinal_item =1;
}

message NUT9001U00grdINP5001QueryEndRequest { 
  optional string nut_date =1;
  optional string bld_gubun =2;
}

message NUT9001U00grdINP5001QueryEndResponse { 
  optional DataStringListItemInfo grd_item =1;
}

message NUT9001U00cbxSiksaChangeYNCRequest { 
  optional string value =1;
  optional string code =2;
}

message NUT9001U00cbxSiksaChangeYNCResponse { 
  optional DataStringListItemInfo cbx_item =1;
}

message NUT9001U00PRNutMagamRequest { 
  optional string upd_id =1;
  optional string magam_date =2;
  optional string bld_gubun =3;
  optional string nut_magam_gubun =4;
}

message NUT9001U00PRNutMagamResponse { 
  optional NUT9001U00PRNutMagamInfo proc_item 	= 1;
  optional string msg							= 2;
  optional bool result							= 3;
}

message NUT9001U00PRIfsNutProcMainRequest { 
  optional string master_fk =1;
  optional string send_yn =2;
}

message NUT9001U00PRIfsNutProcMainResponse { 
  optional NUT9001U00PRIfsNutProcMainInfo proc_item =1;
}

message NUT9001Q01createHoDongRequest { 
}

message NUT9001Q01grdListRequest { 
   optional string nut_date =1;
   optional string bld_gubun =2;
   optional string ho_dong =3;
   optional string changed_gubun =4;
   optional string magam_seq =5;
   optional string offset =6;
   optional string page_number =7;
}

message NUT9001Q01grdListResponse { 
	repeated NUT9001Q01grdListInfo grd_master_item =1;
} 

message NUT9001U00ScreenOpenRequest { 
	optional string code1 =1;
  	optional string code2 =2;
}
 
message NUT9001U00ScreenOpenResponse { 
	repeated DataStringListItemInfo data_items =1;
}

